--- a/docs/package.json
+++ b/docs/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@iconify-json/ph": "^1.1.6",
-    "@iconify-json/simple-icons": "^1.1.72",
+    "@iconify-json/simple-icons": "^1.1.73",
     "@nuxt/content": "^2.8.5",
-    "@nuxt/ui-pro": "npm:@nuxt/ui-pro-edge@latest",
-    "@nuxthq/studio": "^0.14.1",
+    "@nuxt/ui-pro": "^0.2.1",
+    "@nuxthq/studio": "^1.0.0",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/plausible": "^0.2.3",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
     "nuxt": "^3.7.4",
-    "nuxt-og-image": "^2.0.28"
+    "nuxt-og-image": "^2.1.1"
   },
   "resolutions": {
     "h3": "^1.8.2"
