--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@nuxt/content",
   "version": "2.8.5",
   "description": "Write your content inside your Nuxt app",
+  "homepage": "https://content.nuxt.com"
   "keywords": [
     "nuxt",
     "content",
