build: emit `.js` files within runtime directory

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
       "import": "./dist/module.mjs",
       "require": "./dist/module.cjs"
     },
-    "./transformers": "./dist/runtime/transformers/index.mjs",
-    "./transformers/*": "./dist/runtime/transformers/*.mjs"
+    "./transformers": "./dist/runtime/transformers/index.js",
+    "./transformers/*": "./dist/runtime/transformers/*.js"
   },
   "main": "./dist/module.cjs",
   "module": "./dist/module.mjs",
