--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "./transformers": "./dist/runtime/transformers/index.js",
     "./transformers/*": "./dist/runtime/transformers/*.js",
+    "./types": "./dist/runtime/types/index.js",
     "./dist/runtime/types": "./dist/runtime/types/index.js"
   },
   "main": "./dist/module.cjs",
