--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "test:unit": "nuxi prepare test/fixtures/basic && nuxi prepare test/fixtures/document-driven && vitest run"
   },
   "dependencies": {
-    "@vueuse/core": "^10.7.0",
-    "@vueuse/nuxt": "^10.7.0",
     "@nuxt/kit": "^3.8.2",
     "@nuxtjs/mdc": "^0.3.0",
+    "@vueuse/core": "^10.7.0",
     "@vueuse/head": "^2.0.0",
+    "@vueuse/nuxt": "^10.7.0",
     "consola": "^3.2.3",
     "defu": "^6.1.3",
     "destr": "^2.0.2",
@@ -59,14 +59,14 @@
     "listhen": "^1.5.5",
     "mdast-util-to-string": "^4.0.0",
     "mdurl": "^2.0.0",
-    "minisearch": "^6.3.0",
-    "micromark": "^4.0.0",
     "micromark-util-sanitize-uri": "^2.0.0",
     "micromark-util-types": "^2.0.0",
+    "micromark": "^4.0.0",
+    "minisearch": "^6.3.0",
     "ohash": "^1.1.3",
     "pathe": "^1.1.1",
     "scule": "^1.1.1",
-    "shiki-es": "^0.14.0",
+    "shikiji": "^0.9.18",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.7.2",
     "ufo": "^1.3.2",
