--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "ohash": "^1.1.3",
     "pathe": "^1.1.2",
     "scule": "^1.2.0",
-    "shikiji": "^0.10.2",
+    "shiki": "^1.0.0-beta.5",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.7.4",
     "ufo": "^1.3.2",
