--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,7 @@
     "@iconify-json/ph": "^1.1.11",
     "@iconify-json/simple-icons": "^1.1.94",
     "@nuxt/content": "^2.12.0",
+    "@nuxt/fonts": "^0.2.0",
     "@nuxt/ui-pro": "^1.0.2",
     "@nuxthq/studio": "^1.0.12",
     "@nuxtjs/fontaine": "^0.4.1",
