--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build:docs": "(cd docs && nuxi build)",
     "build:web-types": "vue-docgen-web-types src/runtime/components/ ./dist/web-types.json",
     "example": "./scripts/example.sh",
-    "lint": "eslint --ext .js,.ts,.vue .",
+    "lint": "eslint .",
     "release": "npm run lint; release-it",
     "prepack": "pnpm build",
     "test:coverage": "vitest --coverage",
@@ -59,9 +59,9 @@
     "listhen": "^1.7.2",
     "mdast-util-to-string": "^4.0.0",
     "mdurl": "^2.0.0",
+    "micromark": "^4.0.0",
     "micromark-util-sanitize-uri": "^2.0.0",
     "micromark-util-types": "^2.0.0",
-    "micromark": "^4.0.0",
     "minisearch": "^6.3.0",
     "ohash": "^1.1.3",
     "pathe": "^1.1.2",
@@ -75,11 +75,11 @@
     "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@nuxt/eslint-config": "^0.3.6",
     "@nuxt/module-builder": "^0.5.5",
     "@nuxt/schema": "3.11.2",
     "@nuxt/test-utils": "3.12.0",
     "@nuxthq/studio": "^1.0.13",
-    "@nuxtjs/eslint-config-typescript": "latest",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@types/ws": "^8.5.10",
     "c8": "^9.1.0",
