--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.11.2",
-    "@nuxtjs/mdc": "^0.8.0",
+    "@nuxtjs/mdc": "^0.8.1",
     "@vueuse/core": "^10.11.0",
     "@vueuse/head": "^2.0.0",
     "@vueuse/nuxt": "^10.11.0",
@@ -95,7 +95,8 @@
     "release-it": "^17.3.0",
     "remark-oembed": "^1.2.2",
     "vitest": "^1.6.0",
-    "vue-docgen-web-types": "^0.1.8"
+    "vue-docgen-web-types": "^0.1.8",
+    "vue-tsc": "2.0.19"
   },
   "release-it": {
     "git": {
