--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "dev": "./scripts/playground.sh",
     "dev:build": "nuxi build playground/basic",
-    "prepare": "nuxi prepare playground/basic",
+    "prepare": "nuxt-module-build build --stub; nuxt-module-build prepare; nuxi prepare playground/basic",
     "dev:fixtures": "./scripts/fixture.sh",
     "build": "nuxt-module-build build && pnpm build:web-types",
     "build:docs": "(cd docs && nuxi build)",
