--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
   "type": "module",
   "exports": {
     ".": {
+      "types": "./dist/types.d.ts",
       "import": "./dist/module.mjs",
       "require": "./dist/module.cjs"
     },
     "./transformers": "./dist/runtime/transformers/index.js",
-    "./transformers/*": "./dist/runtime/transformers/*.js",
-    "./types": "./dist/runtime/types/index.js",
-    "./dist/runtime/types": "./dist/runtime/types/index.js"
+    "./transformers/*": "./dist/runtime/transformers/*.js"
   },
   "main": "./dist/module.cjs",
   "module": "./dist/module.mjs",
@@ -31,7 +30,7 @@
   "scripts": {
     "dev": "./scripts/playground.sh",
     "dev:build": "nuxi build playground/basic",
-    "prepare": "nuxi prepare playground/basic",
+    "prepare": "nuxt-module-build build --stub; nuxt-module-build prepare; nuxi prepare playground/basic",
     "dev:fixtures": "./scripts/fixture.sh",
     "build": "nuxt-module-build build && pnpm build:web-types",
     "build:docs": "(cd docs && nuxi build)",
@@ -46,7 +45,7 @@
     "test:unit": "nuxi prepare test/fixtures/basic && nuxi prepare test/fixtures/document-driven && vitest run"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.11.2",
+    "@nuxt/kit": "^3.12.1",
     "@nuxtjs/mdc": "^0.8.1",
     "@vueuse/core": "^10.11.0",
     "@vueuse/head": "^2.0.0",
@@ -75,11 +74,12 @@
     "ws": "^8.17.0"
   },
   "devDependencies": {
+    "@nuxt/content": "link:.",
     "@nuxt/eslint-config": "^0.3.13",
     "@nuxt/module-builder": "^0.7.1",
-    "@nuxt/schema": "3.11.2",
-    "@nuxt/test-utils": "3.13.0",
-    "@nuxthq/studio": "^1.1.2",
+    "@nuxt/schema": "3.12.1",
+    "@nuxt/test-utils": "3.13.1",
+    "@nuxthq/studio": "^2.0.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@types/ws": "^8.5.10",
     "c8": "^10.1.2",
@@ -89,7 +89,7 @@
     "husky": "^9.0.11",
     "jiti": "^1.21.6",
     "lint-staged": "^15.2.7",
-    "nuxt": "3.11.2",
+    "nuxt": "3.12.1",
     "rehype-figure": "^1.0.1",
     "rehype-wrap-all": "^1.1.0",
     "release-it": "^17.3.0",
