--- a/docs/package.json
+++ b/docs/package.json
@@ -3,27 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "preview": "nuxi preview",
-    "generate": "nuxi generate"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@iconify-json/ph": "^1.1.13",
     "@iconify-json/simple-icons": "^1.1.109",
     "@nuxt/content": "^2.13.1",
     "@nuxt/fonts": "^0.7.1",
+    "@nuxt/image": "^1.7.0",
     "@nuxt/ui-pro": "^1.3.1",
     "@nuxthq/studio": "^2.0.3",
-    "@nuxtjs/fontaine": "^0.4.3",
-    "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/plausible": "^1.0.0",
     "@vueuse/core": "^10.11.0",
     "@vueuse/nuxt": "^10.11.0",
     "nuxt": "^3.12.3",
-    "nuxt-og-image": "^2.2.6"
+    "nuxt-og-image": "^3.0.0-rc.59"
   },
-  "devDependencies": {
-    "@nuxt/devtools": "^1.3.9"
+  "resolutions": {
+    "@nuxtjs/tailwindcss": "npm:@nuxtjs/tailwindcss@6.12.2-1720701009.60a4bba"
   }
 }
