--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -4,6 +4,11 @@ on:
   schedule:
     - cron: '30 1 * * *'
 
+permissions:
+  contents: write # only for delete-branch option
+  issues: write
+  pull-requests: write
+  
 jobs:
   stale:
     runs-on: ubuntu-latest
