--- a/examples/essentials/hello-world/package.json
+++ b/examples/essentials/hello-world/package.json
@@ -9,6 +9,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@iconify/utils": "^2.1.30",
     "@nuxt/content": "^2.13.2",
     "@nuxt/ui": "^2.18.3",
     "nuxt": "^3.12.4"
