--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-module",
-  "version": "1.0.0",
+  "name": "@farnabaz/content-next",
+  "version": "1.2.0",
   "description": "My new Nuxt module",
   "repository": "your-org/my-module",
   "license": "MIT",
@@ -35,23 +35,28 @@
     "@nuxtjs/mdc": "^0.8.3",
     "@sqlite.org/sqlite-wasm": "3.46.0-build2",
     "better-sqlite3": "^11.1.2",
+    "pako": "^2.1.0",
+    "pathe": "^1.1.2",
+    "unstorage": "^1.10.2",
+    "unwasm": "^0.3.9",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.3.9",
-    "@nuxt/eslint-config": "^0.3.13",
+    "@nuxt/eslint-config": "^0.4.0",
     "@nuxt/module-builder": "^0.8.1",
     "@nuxt/schema": "^3.12.4",
-    "@nuxt/test-utils": "^3.13.1",
+    "@nuxt/test-utils": "^3.14.0",
     "@types/better-sqlite3": "^7.6.11",
-    "@types/node": "^20.14.11",
+    "@types/node": "^22.1.0",
+    "@types/pako": "^2.0.3",
     "changelogen": "^0.5.5",
-    "eslint": "^9.7.0",
+    "eslint": "^9.8.0",
     "nuxt": "^3.12.4",
     "typescript": "latest",
-    "vitest": "^2.0.3",
-    "vue-tsc": "^2.0.26",
-    "wrangler": "^3.67.1"
+    "vitest": "^2.0.5",
+    "vue-tsc": "^2.0.29",
+    "wrangler": "^3.68.0"
   },
   "resolutions": {
     "@nuxtjs/mdc": "npm:@farnabaz/mdc@0.8.3"
