--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "@farnabaz/content-next",
-  "version": "1.2.0",
+  "version": "1.5.0",
   "description": "My new Nuxt module",
   "repository": "your-org/my-module",
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./dist/types.d.ts",
-      "import": "./dist/module.mjs",
-      "require": "./dist/module.cjs"
-    }
+    ".": "./dist/module.mjs"
   },
   "main": "./dist/module.cjs",
-  "types": "./dist/types.d.ts",
+  "types": "./dist/module.d.ts",
   "files": [
     "dist"
   ],
@@ -35,13 +31,17 @@
     "@nuxtjs/mdc": "^0.8.3",
     "@sqlite.org/sqlite-wasm": "3.46.0-build2",
     "better-sqlite3": "^11.1.2",
+    "ohash": "^1.1.3",
     "pako": "^2.1.0",
     "pathe": "^1.1.2",
+    "scule": "^1.3.0",
     "unstorage": "^1.10.2",
     "unwasm": "^0.3.9",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-to-ts": "^1.2.0"
   },
   "devDependencies": {
+    "@farnabaz/content-next": "link:.",
     "@nuxt/devtools": "^1.3.9",
     "@nuxt/eslint-config": "^0.4.0",
     "@nuxt/module-builder": "^0.8.1",
