--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "zod-to-ts": "^1.2.0"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20240909.0",
     "@farnabaz/content-next": "link:.",
     "@nuxt/devtools": "^1.3.9",
     "@nuxt/eslint-config": "^0.4.0",
     "@nuxt/module-builder": "^0.8.1",
     "@nuxt/schema": "^3.12.4",
     "@nuxt/test-utils": "^3.14.0",
-    "@nuxthub/core": "^0.7.1",
     "@types/better-sqlite3": "^7.6.11",
     "@types/node": "^22.1.0",
     "@types/pako": "^2.0.3",
