--- a/playground/package.json
+++ b/playground/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.7.0",
+    "@nuxt/ui": "^2.18.4",
     "@nuxthub/core": "^0.7.1",
     "better-sqlite3": "^11.1.2",
     "nuxt": "^3.12.4"
