--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "shiki": "^1.12.1",
     "unstorage": "^1.10.2",
     "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.3",
     "zod-to-ts": "^1.2.0"
   },
   "devDependencies": {
