--- a/package.json
+++ b/package.json
@@ -25,16 +25,29 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/content": "^2.13.2",
     "@nuxt/kit": "^3.12.4",
     "@nuxtjs/mdc": "^0.8.3",
     "@sqlite.org/sqlite-wasm": "3.46.0-build2",
     "better-sqlite3": "^11.1.2",
+    "destr": "^2.0.3",
+    "json5": "^2.2.3",
+    "mdast-util-to-hast": "^13.2.0",
+    "mdast-util-to-string": "^4.0.0",
+    "micromark": "^4.0.0",
+    "micromark-util-character": "^2.1.0",
+    "micromark-util-chunked": "^2.0.0",
+    "micromark-util-resolve-all": "^2.0.0",
+    "micromark-util-sanitize-uri": "^2.0.0",
     "ohash": "^1.1.3",
     "pako": "^2.1.0",
     "pathe": "^1.1.2",
+    "remark-mdc": "^3.2.1",
     "scule": "^1.3.0",
     "shiki": "^1.12.1",
+    "slugify": "^1.6.6",
+    "ufo": "^1.5.4",
+    "unified": "^11.0.5",
+    "unist-util-stringify-position": "^4.0.0",
     "unstorage": "^1.10.2",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.3",
@@ -55,6 +68,7 @@
     "@types/pako": "^2.0.3",
     "changelogen": "^0.5.5",
     "eslint": "^9.8.0",
+    "micromark-util-types": "^2.0.0",
     "nuxt": "^3.12.4",
     "typescript": "latest",
     "vitest": "^2.0.5",
