--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@nuxtjs/mdc": "^0.8.3",
     "@sqlite.org/sqlite-wasm": "3.46.0-build2",
     "better-sqlite3": "^11.1.2",
+    "chokidar": "^4.0.0",
+    "consola": "^3.2.3",
     "destr": "^2.0.3",
+    "fast-glob": "^3.3.2",
     "json5": "^2.2.3",
     "mdast-util-to-hast": "^13.2.0",
     "mdast-util-to-string": "^4.0.0",
@@ -38,6 +41,7 @@
     "micromark-util-chunked": "^2.0.0",
     "micromark-util-resolve-all": "^2.0.0",
     "micromark-util-sanitize-uri": "^2.0.0",
+    "micromatch": "^4.0.8",
     "ohash": "^1.1.3",
     "pako": "^2.1.0",
     "pathe": "^1.1.2",
@@ -48,7 +52,6 @@
     "ufo": "^1.5.4",
     "unified": "^11.0.5",
     "unist-util-stringify-position": "^4.0.0",
-    "unstorage": "^1.10.2",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.3",
     "zod-to-ts": "^1.2.0"
@@ -64,6 +67,7 @@
     "@nuxt/ui": "^2.18.4",
     "@nuxthub/core": "^0.7.18",
     "@types/better-sqlite3": "^7.6.11",
+    "@types/micromatch": "^4.0.9",
     "@types/node": "^22.1.0",
     "@types/pako": "^2.0.3",
     "changelogen": "^0.5.5",
