chore: pnpm workspace

--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "@farnabaz/content-next",
-  "version": "1.35.0",
-  "description": "My new Nuxt module",
-  "repository": "your-org/my-module",
+  "version": "3.1.0-1727351883.9a4bb74",
+  "description": "Write your content inside your Nuxt app",
+  "homepage": "https://content.nuxt.com",
+  "keywords": [
+    "nuxt",
+    "content",
+    "module"
+  ],
+  "repository": "nuxt/content",
   "license": "MIT",
   "type": "module",
   "exports": {
@@ -64,9 +70,6 @@
     "@nuxt/module-builder": "^0.8.1",
     "@nuxt/schema": "^3.12.4",
     "@nuxt/test-utils": "^3.14.0",
-    "@nuxt/ui": "^2.18.4",
-    "@nuxt/ui-pro": "^1.4.3",
-    "@nuxthub/core": "^0.7.18",
     "@types/better-sqlite3": "^7.6.11",
     "@types/micromatch": "^4.0.9",
     "@types/node": "^22.1.0",
