--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,5 @@
 {
   "private": true,
-  "name": "my-module-playground",
   "type": "module",
   "scripts": {
     "dev": "nuxi dev",
@@ -10,8 +9,8 @@
   "dependencies": {
     "@nuxt/image": "^1.7.0",
     "@nuxt/ui": "^2.18.4",
+    "@nuxt/ui-pro": "^1.4.3",
     "@nuxthub/core": "^0.7.1",
-    "better-sqlite3": "^11.1.2",
     "nuxt": "^3.12.4"
   }
 }
