--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@farnabaz/content-next",
+  "name": "@nuxt/content",
   "version": "3.0.0",
   "description": "Write your content inside your Nuxt app",
   "homepage": "https://content.nuxt.com",
@@ -68,7 +68,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240909.0",
-    "@farnabaz/content-next": "link:.",
+    "@nuxt/content": "link:.",
     "@nuxt/devtools": "^1.3.9",
     "@nuxt/eslint-config": "^0.4.0",
     "@nuxt/module-builder": "^0.8.1",
