--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nuxt/content",
-  "version": "3.0.0",
+  "name": "@farnabaz/content-next",
+  "version": "3.1.0-20240927-145533-6721dbd",
   "description": "Write your content inside your Nuxt app",
   "homepage": "https://content.nuxt.com",
   "keywords": [
@@ -34,11 +34,11 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.12.4",
-    "@nuxtjs/mdc": "^0.8.3",
-    "@sqlite.org/sqlite-wasm": "3.46.0-build2",
-    "better-sqlite3": "^11.1.2",
-    "chokidar": "^4.0.0",
+    "@nuxt/kit": "^3.13.2",
+    "@nuxtjs/mdc": "^0.9.0",
+    "@sqlite.org/sqlite-wasm": "3.46.1-build3",
+    "better-sqlite3": "^11.3.0",
+    "chokidar": "^4.0.1",
     "consola": "^3.2.3",
     "destr": "^2.0.3",
     "fast-glob": "^3.3.2",
@@ -52,12 +52,12 @@
     "micromark-util-resolve-all": "^2.0.0",
     "micromark-util-sanitize-uri": "^2.0.0",
     "micromatch": "^4.0.8",
-    "ohash": "^1.1.3",
+    "ohash": "^1.1.4",
     "pako": "^2.1.0",
     "pathe": "^1.1.2",
     "remark-mdc": "^3.2.1",
     "scule": "^1.3.0",
-    "shiki": "^1.12.1",
+    "shiki": "^1.20.0",
     "slugify": "^1.6.6",
     "ufo": "^1.5.4",
     "unified": "^11.0.5",
@@ -67,25 +67,25 @@
     "zod-to-ts": "^1.2.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240909.0",
-    "@nuxt/content": "link:.",
-    "@nuxt/devtools": "^1.3.9",
-    "@nuxt/eslint-config": "^0.4.0",
-    "@nuxt/module-builder": "^0.8.1",
-    "@nuxt/schema": "^3.12.4",
-    "@nuxt/test-utils": "^3.14.0",
+    "@cloudflare/workers-types": "^4.20240925.0",
+    "@farnabaz/content-next": "link:.",
+    "@nuxt/devtools": "^1.5.1",
+    "@nuxt/eslint-config": "^0.5.7",
+    "@nuxt/module-builder": "^0.8.4",
+    "@nuxt/schema": "^3.13.2",
+    "@nuxt/test-utils": "^3.14.2",
     "@types/better-sqlite3": "^7.6.11",
     "@types/micromatch": "^4.0.9",
-    "@types/node": "^22.1.0",
+    "@types/node": "^22.7.3",
     "@types/pako": "^2.0.3",
-    "changelogen": "^0.5.5",
-    "eslint": "^9.8.0",
+    "changelogen": "^0.5.7",
+    "eslint": "^9.11.1",
     "micromark-util-types": "^2.0.0",
-    "nuxt": "^3.12.4",
+    "nuxt": "^3.13.2",
     "typescript": "latest",
-    "vitest": "^2.0.5",
-    "vue-tsc": "^2.0.29",
-    "wrangler": "^3.68.0"
+    "vitest": "^2.1.1",
+    "vue-tsc": "^2.1.6",
+    "wrangler": "^3.78.11"
   },
   "resolutions": {
     "@nuxtjs/mdc": "npm:@farnabaz/mdc@0.8.3"
