--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "scule": "^1.3.0",
     "shiki": "^1.20.0",
     "slugify": "^1.6.6",
+    "tar": "^7.4.3",
     "ufo": "^1.5.4",
     "unified": "^11.0.5",
     "unist-util-stringify-position": "^4.0.0",
