--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.13.2",
-    "@nuxtjs/mdc": "^0.9.0",
+    "@nuxtjs/mdc": "npm:@nuxtjs/mdc-edge@latest",
     "@sqlite.org/sqlite-wasm": "3.46.1-build3",
     "better-sqlite3": "^11.3.0",
     "chokidar": "^4.0.1",
