--- a/playground/package.json
+++ b/playground/package.json
@@ -8,8 +8,8 @@
     "generate": "nuxi generate"
   },
   "dependencies": {
-    "@nuxt/ui": "^2.18.4",
-    "@nuxt/ui-pro": "^1.4.3",
+    "@nuxt/ui": "3.0.0-alpha.6",
+    "@nuxt/ui-pro": "2.0.0-alpha.6",
     "@nuxthub/core": "^0.7.1",
     "nuxt": "^3.12.4"
   }
