--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "release": "npm run lint && npm run test && npm run prepack && release-it",
     "lint": "eslint .",
     "test": "vitest run",
     "test:watch": "vitest watch",
@@ -36,7 +36,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.13.2",
-    "@nuxtjs/mdc": "npm:@nuxtjs/mdc-edge@latest",
+    "@nuxtjs/mdc": "^0.9.2",
     "@sqlite.org/sqlite-wasm": "3.46.1-build4",
     "better-sqlite3": "^11.3.0",
     "chokidar": "^4.0.1",
@@ -84,11 +84,11 @@
     "@types/node": "^22.7.5",
     "@types/pako": "^2.0.3",
     "@types/ws": "^8.5.12",
-    "changelogen": "^0.5.7",
     "csvtojson": "^2.0.10",
     "eslint": "^9.12.0",
     "micromark-util-types": "^2.0.0",
     "nuxt": "^3.13.2",
+    "release-it": "^17.10.0",
     "typescript": "latest",
     "vitest": "^2.1.3",
     "vue-tsc": "^2.1.6",
