--- a/package.json
+++ b/package.json
@@ -93,5 +93,8 @@
     "vitest": "^2.1.3",
     "vue-tsc": "^2.1.6",
     "wrangler": "^3.80.4"
+  },
+  "resolutions": {
+    "vue": "^3.5.12"
   }
 }
