docs: add missing components

--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@nuxt/ui-docs",
+  "name": "@nuxt/content-docs",
   "type": "module",
   "dependencies": {
     "@iconify-json/heroicons": "^1.2.1",
