chore: upgrade module

--- a/docs/package.json
+++ b/docs/package.json
@@ -6,6 +6,7 @@
     "@iconify-json/heroicons": "^1.2.1",
     "@iconify-json/simple-icons": "^1.2.8",
     "@iconify-json/vscode-icons": "^1.2.2",
+    "@nuxt/content": "^3.0.0-alpha.1",
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "3.0.0-alpha.6",
     "@nuxt/ui-pro": "2.0.0-alpha.6",
