--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "shiki": "^1.22.0",
     "slugify": "^1.6.6",
     "tar": "^7.4.3",
+    "typescript": "^5.6.3",
     "ufo": "^1.5.4",
     "unified": "^11.0.5",
     "unist-util-stringify-position": "^4.0.0",
@@ -70,6 +71,9 @@
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.3",
     "zod-to-ts": "^1.2.0"
+  },
+  "peerDependencies": {
+    "pg": "*"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241011.0",
@@ -89,7 +93,6 @@
     "micromark-util-types": "^2.0.0",
     "nuxt": "^3.13.2",
     "release-it": "^17.10.0",
-    "typescript": "latest",
     "vitest": "^2.1.3",
     "vue-tsc": "^2.1.6",
     "wrangler": "^3.80.4"
