--- a/examples/blog/package.json
+++ b/examples/blog/package.json
@@ -7,7 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "dev:prepare": "nuxt prepare"
   },
   "dependencies": {
     "@nuxt/content": "^3.0.0-alpha.1",
