--- a/playground/package.json
+++ b/playground/package.json
@@ -6,7 +6,7 @@
     "dev": "nuxi dev",
     "build": "nuxi build",
     "generate": "nuxi generate",
-    "postinstall": "nuxt prepare"
+    "dev:prepare": "nuxt prepare"
   },
   "dependencies": {
     "@nuxt/ui": "3.0.0-alpha.6",
