--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": "./dist/module.mjs"
+    ".": {
+      "types": "./dist/module.d.ts",
+      "import": "./dist/module.mjs",
+      "require": "./dist/module.cjs"
+    }
   },
   "main": "./dist/module.cjs",
   "types": "./dist/module.d.ts",
