--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
     "@octokit/rest": "^21.0.2",
     "@vueuse/nuxt": "^11.1.0",
     "joi": "^17.13.3",
+    "minisearch": "^7.1.0",
     "nuxt": "3.13.2",
     "nuxt-og-image": "^3.0.6",
     "prettier": "^3.3.3",
