chore: upgrade deps

--- a/docs/package.json
+++ b/docs/package.json
@@ -8,8 +8,8 @@
     "@iconify-json/vscode-icons": "^1.2.2",
     "@nuxt/content": "^3.0.0-alpha.5",
     "@nuxt/image": "^1.8.1",
-    "@nuxt/ui": "3.0.0-alpha.6",
-    "@nuxt/ui-pro": "https://pkg.pr.new/@nuxt/ui-pro@f8e24cf",
+    "@nuxt/ui": "https://pkg.pr.new/@nuxt/ui@50cc034",
+    "@nuxt/ui-pro": "https://pkg.pr.new/@nuxt/ui-pro@8eac713",
     "@nuxthub/core": "^0.7.32",
     "@nuxtjs/plausible": "^1.0.3",
     "@octokit/rest": "^21.0.2",
