--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,6 +1,6 @@
 name: "\U0001F41E Bug Report"
 description: Create a report to help us improve Nuxt
-labels: ["pending triage"]
+labels: ["triage", "v2"]
 body:
   - type: markdown
     attributes:
