--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,7 @@
     "@iconify-json/heroicons": "^1.2.1",
     "@iconify-json/simple-icons": "^1.2.8",
     "@iconify-json/vscode-icons": "^1.2.2",
-    "@nuxt/content": "^3.0.0-alpha.5",
+    "@nuxt/content": "https://pkg.pr.new/@nuxt/content@99f25df",
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "https://pkg.pr.new/@nuxt/ui@50cc034",
     "@nuxt/ui-pro": "https://pkg.pr.new/@nuxt/ui-pro@8eac713",
