--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "destr": "^2.0.3",
     "fast-glob": "^3.3.2",
     "jiti": "^2.4.0",
+    "git-url-parse": "^15.0.0",
     "knitwork": "^1.1.0",
     "listhen": "^1.9.0",
     "mdast-util-to-hast": "^13.2.0",
@@ -60,12 +61,15 @@
     "micromark-util-resolve-all": "^2.0.0",
     "micromark-util-sanitize-uri": "^2.0.0",
     "micromatch": "^4.0.8",
+    "nuxt-component-meta": "^0.9.0",
     "ohash": "^1.1.4",
     "pathe": "^1.1.2",
+    "pkg-types": "^1.2.1",
     "remark-mdc": "^3.2.1",
     "scule": "^1.3.0",
     "shiki": "^1.22.2",
     "slugify": "^1.6.6",
+    "socket.io-client": "^4.8.1",
     "tar": "^7.4.3",
     "typescript": "^5.6.3",
     "ufo": "^1.5.4",
