--- a/docs/package.json
+++ b/docs/package.json
@@ -3,21 +3,20 @@
   "name": "@nuxt/content-docs",
   "type": "module",
   "dependencies": {
-    "@iconify-json/heroicons": "^1.2.1",
-    "@iconify-json/simple-icons": "^1.2.8",
+    "@iconify-json/lucide": "^1.2.12",
+    "@iconify-json/simple-icons": "^1.2.11",
     "@iconify-json/vscode-icons": "^1.2.2",
     "@nuxt/content": "^3.0.0-alpha.5",
     "@nuxt/image": "^1.8.1",
-    "@nuxt/ui": "https://pkg.pr.new/@nuxt/ui@50cc034",
-    "@nuxt/ui-pro": "https://pkg.pr.new/@nuxt/ui-pro@8eac713",
-    "@nuxthub/core": "^0.7.32",
+    "@nuxt/ui-pro": "3.0.0-alpha.8",
+    "@nuxthub/core": "^0.8.6",
     "@nuxtjs/plausible": "^1.0.3",
     "@octokit/rest": "^21.0.2",
-    "@vueuse/nuxt": "^11.1.0",
+    "@vueuse/nuxt": "^11.2.0",
     "joi": "^17.13.3",
     "minisearch": "^7.1.0",
-    "nuxt": "3.13.2",
-    "nuxt-og-image": "^3.0.6",
+    "nuxt": "3.14.159",
+    "nuxt-og-image": "^3.0.8",
     "prettier": "^3.3.3",
     "shiki-transformer-color-highlight": "^0.2.0",
     "ufo": "^1.5.4",
