--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,7 @@
     "@iconify-json/lucide": "^1.2.12",
     "@iconify-json/simple-icons": "^1.2.11",
     "@iconify-json/vscode-icons": "^1.2.2",
-    "@nuxt/content": "^3.0.0-alpha.5",
+    "@nuxt/content": "latest",
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui-pro": "3.0.0-alpha.8",
     "@nuxthub/core": "^0.8.6",
