chore(deps): set `@nuxt/ui-pro` resolution

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
   },
   "resolutions": {
     "@nuxt/content": "workspace:*",
+    "@nuxt/ui-pro": "https://pkg.pr.new/@nuxt/ui-pro@3623989",
     "vue": "^3.5.12"
   },
   "packageManager": "pnpm@9.12.3"
