--- a/package.json
+++ b/package.json
@@ -72,14 +72,15 @@
     "ufo": "^1.5.4",
     "unified": "^11.0.5",
     "unist-util-stringify-position": "^4.0.0",
+    "unist-util-visit": "^5.0.0",
     "ws": "^8.18.0",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.5",
     "zod-to-ts": "^1.2.0"
   },
   "peerDependencies": {
-    "pg": "*",
-    "@libsql/client": "*"
+    "@libsql/client": "*",
+    "pg": "*"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241106.0",
