docs: fix example

--- a/docs/content/index.yml
+++ b/docs/content/index.yml
@@ -105,12 +105,12 @@ sections:
       </script>
 
       <template>
-        <section class="flex items-center gap-12">
-          <div class="flex flex-col gap-2">
-            <h1 class="text-4xl">
-              <MDCSlot unwrap="p" />
+        <section class="flex flex-col sm:flex-row sm:items-center flex-col-reverse gap-4 py-8 sm:gap-12 sm:py-12">
+          <div>
+            <h1 class="text-4xl font-semibold">
+              <slot name="title" />
             </h1>
-            <div class="text-base text-gray-500 dark:text-gray-400">
+            <div class="text-base text-gray-600 dark:text-gray-300">
               <slot name="description" />
             </div>
           </div>
