--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "defu": "^6.1.4",
     "destr": "^2.0.3",
     "fast-glob": "^3.3.2",
-    "jiti": "^2.4.0",
     "git-url-parse": "^15.0.0",
+    "jiti": "^2.4.0",
     "knitwork": "^1.1.0",
     "listhen": "^1.9.0",
     "mdast-util-to-hast": "^13.2.0",
@@ -64,6 +64,7 @@
     "micromatch": "^4.0.8",
     "nuxt-component-meta": "^0.9.0",
     "ohash": "^1.1.4",
+    "parse-git-config": "^3.0.0",
     "pathe": "^1.1.2",
     "pkg-types": "^1.2.1",
     "remark-mdc": "^3.2.1",
