--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.14.159",
-    "@nuxtjs/mdc": "^0.9.4",
+    "@nuxtjs/mdc": "npm:@nuxtjs/mdc-edge@latest",
     "@sqlite.org/sqlite-wasm": "3.47.0-build1",
     "better-sqlite3": "^11.5.0",
     "c12": "^2.0.1",
@@ -55,17 +55,17 @@
     "listhen": "^1.9.0",
     "mdast-util-to-hast": "^13.2.0",
     "mdast-util-to-string": "^4.0.0",
-    "micromark": "^4.0.1",
-    "micromark-util-character": "^2.1.1",
-    "micromark-util-chunked": "^2.0.1",
-    "micromark-util-resolve-all": "^2.0.1",
-    "micromark-util-sanitize-uri": "^2.0.1",
+    "micromark": "^4.0.0",
+    "micromark-util-character": "^2.1.0",
+    "micromark-util-chunked": "^2.0.0",
+    "micromark-util-resolve-all": "^2.0.0",
+    "micromark-util-sanitize-uri": "^2.0.0",
     "micromatch": "^4.0.8",
     "ohash": "^1.1.4",
     "pathe": "^1.1.2",
     "remark-mdc": "latest",
     "scule": "^1.3.0",
-    "shiki": "^1.23.1",
+    "shiki": "^1.22.2",
     "slugify": "^1.6.6",
     "tar": "^7.4.3",
     "typescript": "^5.6.3",
@@ -83,10 +83,10 @@
     "pg": "*"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241112.0",
+    "@cloudflare/workers-types": "^4.20241106.0",
     "@nuxt/content": "link:.",
     "@nuxt/devtools": "^1.6.0",
-    "@nuxt/eslint-config": "^0.7.1",
+    "@nuxt/eslint-config": "^0.6.1",
     "@nuxt/module-builder": "^0.8.4",
     "@nuxt/schema": "^3.14.159",
     "@nuxt/test-utils": "^3.14.4",
@@ -96,17 +96,17 @@
     "@types/pg": "^8.11.10",
     "@types/ws": "^8.5.13",
     "csvtojson": "^2.0.10",
-    "eslint": "^9.15.0",
-    "micromark-util-types": "^2.0.1",
+    "eslint": "^9.14.0",
+    "micromark-util-types": "^2.0.0",
     "nuxt": "^3.14.159",
     "release-it": "^17.10.0",
-    "vitest": "^2.1.5",
+    "vitest": "^2.1.4",
     "vue-tsc": "^2.1.10",
-    "wrangler": "^3.87.0"
+    "wrangler": "^3.85.0"
   },
   "resolutions": {
     "@nuxt/content": "workspace:*",
     "vue": "^3.5.12"
   },
-  "packageManager": "pnpm@9.13.2"
+  "packageManager": "pnpm@9.12.3"
 }
