--- a/package.json
+++ b/package.json
@@ -48,17 +48,17 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.14.1592",
-    "@nuxtjs/mdc": "npm:@nuxtjs/mdc-edge@latest",
-    "@sqlite.org/sqlite-wasm": "3.47.0-build1",
-    "better-sqlite3": "^11.5.0",
+    "@nuxtjs/mdc": "0.10.0",
+    "@sqlite.org/sqlite-wasm": "3.47.1-build1",
+    "better-sqlite3": "^11.6.0",
     "c12": "^2.0.1",
     "chokidar": "^4.0.1",
     "consola": "^3.2.3",
     "defu": "^6.1.4",
     "destr": "^2.0.3",
     "fast-glob": "^3.3.2",
-    "git-url-parse": "^15.0.0",
-    "jiti": "^2.4.0",
+    "git-url-parse": "^16.0.0",
+    "jiti": "^2.4.1",
     "knitwork": "^1.1.0",
     "listhen": "^1.9.0",
     "mdast-util-to-hast": "^13.2.0",
@@ -77,7 +77,7 @@
     "pkg-types": "^1.2.1",
     "remark-mdc": "latest",
     "scule": "^1.3.0",
-    "shiki": "^1.23.1",
+    "shiki": "^1.24.0",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.8.1",
     "tar": "^7.4.3",
@@ -96,10 +96,10 @@
     "pg": "*"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241112.0",
+    "@cloudflare/workers-types": "^4.20241127.0",
     "@nuxt/content": "link:.",
     "@nuxt/devtools": "^1.6.1",
-    "@nuxt/eslint-config": "^0.7.1",
+    "@nuxt/eslint-config": "^0.7.2",
     "@nuxt/module-builder": "^0.8.4",
     "@nuxt/schema": "^3.14.1592",
     "@nuxt/test-utils": "^3.14.4",
@@ -107,23 +107,23 @@
     "@types/better-sqlite3": "^7.6.12",
     "@types/micromatch": "^4.0.9",
     "@types/minimatch": "^5.1.2",
-    "@types/node": "^22.9.1",
+    "@types/node": "^22.10.1",
     "@types/pg": "^8.11.10",
     "@types/ws": "^8.5.13",
     "csvtojson": "^2.0.10",
-    "eslint": "^9.15.0",
+    "eslint": "^9.16.0",
     "micromark-util-types": "^2.0.1",
     "nuxt": "^3.14.1592",
     "release-it": "^17.10.0",
-    "vitest": "^2.1.5",
+    "vitest": "^2.1.8",
     "vue-tsc": "^2.1.10",
-    "wrangler": "^3.88.0"
+    "wrangler": "^3.91.0"
   },
   "resolutions": {
     "@nuxt/content": "workspace:*",
     "vue": "^3.5.12"
   },
-  "packageManager": "pnpm@9.14.2",
+  "packageManager": "pnpm@9.14.4",
   "unbuild": {
     "entries": [
       "./src/module",
