--- a/docs/content/blog.yml
+++ b/docs/content/blog.yml
@@ -1,3 +1,3 @@
 title: Blog
-description: Read the latest news about Nuxt Studio or articles about CMS development with Nuxt.
+description: Read the latest news about Nuxt Content or articles about the Studio platform.
 
