--- a/package.json
+++ b/package.json
@@ -121,8 +121,7 @@
   },
   "resolutions": {
     "@nuxt/content": "workspace:*",
-    "@nuxt/icon": "1.7.6",
-    "vue": "^3.5.12"
+    "unimport": "3.14.5"
   },
   "packageManager": "pnpm@9.15.0",
   "unbuild": {
