chore: showcase remark-code-import

--- a/playground/package.json
+++ b/playground/package.json
@@ -9,6 +9,7 @@
     "dev:prepare": "nuxt prepare"
   },
   "dependencies": {
+    "remark-code-import": "latest",
     "@nuxt/content": "latest",
     "@nuxt/ui-pro": "3.0.0-alpha.9",
     "@nuxthub/core": "^0.8.6",
